snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.md5
6eaf11d7e3c173c0ea1f245cef0b7c05